# ExperimentoBERT-PLI

./: .gitignore  README.md  poolout.py  pyproject.toml  train.py
config/: default.config
config/nlp/: AttenGRU.config  AttenLSTM.config  BertPoint.config  BertPoolOutMax.config
data/: train_task2.json
support/: coliee_paragraph_retrieval_parser.py  coliee_split_data.py  extract_relevant_clustered_segments.py  pyproject.toml  qdrant_coliee_loader.py  qdrant_hdbscan.py  sumy_coliee.py
tools/: train_tool.py
