[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "hdbscan>=0.8.40",
    "huggingface-hub==0.25.2",
    "numpy==1.26.4",
    "qdrant-client>=1.12.1",
    "ray>=2.49.2",
    "sentence-transformers>=2.2.2",
    "spacy>=3.8.7",
    "torch==1.12.1",
    "transformers==4.29.2",
]
